--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=hr-payroll
-server.port=8101
+server.port=${PORT:0}
 
 # Eureka cofiguration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
