--- a/hr-api-geteway-zull/src/main/resources/application.properties
+++ b/hr-api-geteway-zull/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.port=8765
 # Eureka cofiguration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+# Timeouts
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
+
 # Zull configuration
 ## worker
 zuul.routes.worker.serviceId=hr-worker
