--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=hr-config-server
 
+spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.uri=https://github.com/walacetalesfs/ms-course-configs
+spring.cloud.config.server.git.username=${GITHUB_USER}
+spring.cloud.config.server.git.password=${GITHUB_PASS}
+
+server.port=8888
