--- a/hr-api-gateway-zuul/src/main/resources/bootstrap.properties
+++ b/hr-api-gateway-zuul/src/main/resources/bootstrap.properties
@@ -3,4 +3,4 @@ spring.cloud.config.uri=http://localhost:8888
 
 management.endpoints.web.exposure.include=*
 
-#spring.profiles.active=test
+spring.profiles.active=dev
