--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,5 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
+      working-directory: ./hr-worker
       run: mvn -B package -DskipTests
