--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,13 +27,13 @@ jobs:
       run: |
           mvn -B package -DskipTests
           docker build -t hr-worker:$(date +%s) .
-          pwd
-          ls -ld .
-          ls -l
-    - name: Push to Docker Hub
-      uses: docker/build-push-action@v1
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_KEY }}
-        repository: walacetalesfs/hr-worker
-        tags: latest, ${{ github.run_number }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: walacetalesfs/hr-worker:latest
