--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,14 +26,17 @@ jobs:
       working-directory: ./hr-worker
       run: |
           mvn -B package -DskipTests
-          docker build -t hr-worker:$(date +%s) .
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_KEY }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        context: ./hr-worker
+        file: ./Dockerfile
         push: true
-        tags: walacetalesfs/hr-worker:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker:latest
