--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        file: ./Dockerfile
+        file: ./hr-worker/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker:latest
