--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        file: ./hr-worker/Dockerfile
+        context: ./hr-worker
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker:latest
