--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,7 +39,9 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: ./hr-worker
-        file: ./Dockerfile
+        run: |
+          ls
+          pwd
+        file: ./hr-worker/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker:latest
