--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,24 +24,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       working-directory: ./hr-worker
-      run: |
-          mvn -B package -DskipTests
-          cd target
-          pwd
-          ls
+      run: mvn -B package -DskipTests
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_KEY }}
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        run: |
-          ls
-          pwd
-        file: ./hr-worker/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker:latest
+    - name: build e push docker image
+      run: |
+        docker build -t hr-worker:v1 .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker
