--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,8 @@ jobs:
         password: ${{ secrets.DOCKERHUB_KEY }}
     - name: Build and Push docker image
       run: |
-        docker images
         cd hr-worker
         docker build -t hr-worker:v1 .
+        docker images
+        docker tag hr-worker:v1 walacetalesfs/hr-worker:latest
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/hr-worker
