--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,10 +11,9 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
+    
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -22,14 +21,30 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
-    - name: Build with Maven
-      working-directory: ./hr-worker
-      run: mvn -B package -DskipTests
+    
+    - name: Build microservices Maven
+      run: |
+        cd hr-config-server
+        mvn -B clean package
+        cd ../hr-eureka-server
+        mvn -B clean package
+        cd ../hr-worker
+        mvn -B clean package -DskipTests
+        cd ../hr-user
+        mvn -B clean package -DskipTests
+        cd ../hr-payroll
+        mvn -B clean package -DskipTests
+        cd ../hr-oauth
+        mvn -B clean package -DskipTests
+        cd ../hr-api-getway-zuul
+        mvn -B clean package -DskipTests
+
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_KEY }}
+    
     - name: Build and Push docker image
       run: |
         cd hr-worker
