--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         distribution: 'adopt'
         cache: maven
     
-    - name: Build microservices Maven
+    - name: Build Microservices Maven
       run: |
         cd hr-config-server
         mvn -B clean package
@@ -30,14 +30,14 @@ jobs:
         #mvn -B clean package
         cd ../hr-worker
         mvn -B clean package -DskipTests
-        #cd ../hr-user
-        #mvn -B clean package -DskipTests
-        #cd ../hr-payroll
-        #mvn -B clean package -DskipTests
-        #cd ../hr-oauth
-        #mvn -B clean package -DskipTests
-        #cd ../hr-api-getway-zuul
-        #mvn -B clean package -DskipTests
+        cd ../hr-user
+        mvn -B clean package -DskipTests
+        cd ../hr-payroll
+        mvn -B clean package -DskipTests
+        cd ../hr-oauth
+        mvn -B clean package -DskipTests
+        cd ../hr-api-getway-zuul
+        mvn -B clean package -DskipTests
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
