--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
         mvn -B clean package -DskipTests
         cd ../hr-oauth
         mvn -B clean package -DskipTests
-        cd ../hr-api-getway-zuul
+        cd ../hr-api-gateway-zuul
         mvn -B clean package -DskipTests
 
     - name: Login to DockerHub
